# notes-platform-api

./: .env  GEMINI.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: __init__.py  config.py  container.py  logging.py  models.py
app/db/: __init__.py  postgres.py
app/repositories/: note_repo.py  tags_repo.py  user_repo.py
app/routers/: note.py  tag.py  user.py
app/scripts/: schema.sql
app/services/: note_service.py  tag_service.py  user_service.py
docs/: notes_app_core_domain_specification.md
